# promptulate

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PULL_REQUREST_TEMPLATE.md  README.md  README_zh.md  cushy-chat.py  cushy_chat_v2.py  demo.py  github_issue.md  pyproject.toml  requirements.txt  setup.py  sweep.yaml
.github/: PULL_REQUREST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: check-pne.yml  check.yml  deploy-docs.yml  greetings.yml  main.yml  python-publish.yml  release-drafter.yml
cookbook/: chat_usage.ipynb
docs/: CNAME  README.md  _coverpage.md  _sidebar.md  index.html  index.md  package-lock.json  package.json  pnpm-lock.yaml
docs.bak/: CNAME  README.md  _coverpage.md
docs.bak/get_started/: quick_start.md
docs.bak/modules/: agent.md  memory.md  schema.md
docs.bak/other/: contribution.md
docs.bak/use_cases/: build-math-application-with-agent.md  chat_usage.md  gradio-chatbot.md  intro.md  streamlit-chatbot.md  streamlit-groq-llama3.md
docs/.vitepress/: config.mts
docs/components/: RegisterSW.vue  iframe.vue
docs/get_started/: how-to-guide.md  intro.md  quick_start.md
docs/modules/: agent.md  chat_usage.ipynb  chat_usage.md  client.md  formatter.md  framework.md  hook.md  llm.md  memory.md  preset.md  provider.md  schema.md  tools.md
docs/other/: contribution.md  faq.md  fqa.md  how_to_write_model_name.md  knowledge.md  log_system.md  plan.md  plan_utils.py  update.md
docs/public/: robots.txt
docs/use_cases/: build-math-application-with-agent.md  chat-to-github-repo.md  chat_usage.md  chatbot-integrated-mem0.md  game24-with-tot.md  gradio-chatbot.md  intro.md  llmapper.md  mem0-streamlit.md  pne-gradio.md  pne.chat+gradio.md  streamlit+pne.chat().md  streamlit-chatbot.md  streamlit-groq-llama3.md  streamlit-pne.md  wx-chatbot.md
docs/uses_cases/: chat_usage.ipynb  chat_usage.md  intro.md
example/: base_usage.py  base_usage_with_role.py  chat_usage.ipynb  conversation_summary.py  custom_role.py  history_conversation.py  llm-factory-usage.ipynb  openai_usage.py  output2md.py  test.py
example/ToT/: README.md  app.py  models.py  requirements.txt
example/agent/: assistant_agent_usage.ipynb  iot_agent_usage.py  planner-usage.ipynb  tool_agent_terminal.py  tool_agent_usage.py  webagent_usage.py
example/ai-code-interpreter/: app.py  prompt.py  requirements.txt
example/build-math-application-with-agent/: build-math-application-with-agent.ipynb  chatbot.ipynb  chatbot.py  readme.md  requirements.txt
example/chat-to-github-repo/: README.md  config.py  repo_service.py  token_count.py
example/conversation/: base_usage.py  complex_usage.py
example/gradio-chatbot/: README.md  chat.py  requirements.txt  test.py
example/hook/: hook_component_usage.py  hook_instance_decorator_usage.py
example/llm/: custom_conversation.py  custom_llm.ipynb  ernie_usage.py  factory.ipynb  llm-factory-usage.ipynb  llm_concurrency.py  llm_private_key.py  openai_usage.py  qianfan_usage.py  requirements.txt  zhipu_usage.py
example/llmapper/: README.md  app.py  core.py  prompt-summarize.md  requirements.txt
example/mem0/: README.md  app.py  core.py  requirements.txt
example/output_formatter/: output_formatter_with_agent_usage.py  output_formatter_with_llm_usage.py
example/preset_role/: base_usage.py  custom_role.py
example/sql-generator/: demo.py
example/streamlit-chatbot/: README.md  app.py  requirements.txt
example/streamlit-groq-llama3-chatbot/: README.md  app.py  requirements.txt
example/tools/: custom_tool_usage.ipynb  file_tool_usage.ipynb  langchain_tool_usage.ipynb  langchain_usage.py
example/tot/: README.md  app.py  models.py
example/util/: key_pool.py  proxy.py  template_usage.py
example/wx-chatbot/: app.py  chat_message.py  requirements.txt
example_bak/: chat_usage.ipynb
example_bak/ToT/: requirements.txt
example_bak/agent/: assistant_agent_usage.ipynb  iot_agent_usage.py  planner-usage.ipynb  tool_agent_usage.py
example_bak/ai-code-interpreter/: README.md
example_bak/build-math-application-with-agent/: README.md
example_bak/chat-to-github-repo/: README.md  app.py  config.yaml  repo_service.py  requirements.txt
example_bak/gradio-chatbot/: app.py  requirements.txt
example_bak/hook/: hook_component_usage.py  hook_func_usage.py
example_bak/llm/: custom_conversation.py  custom_llm.ipynb
example_bak/llmapper/: app.py  core.py  prompt.py  requirements.txt
example_bak/output_formatter/: output_formatter_with_agent_usage.py  output_formatter_with_llm_usage.py
example_bak/streamlit-chatbot/: README.md
example_bak/streamlit-groq-llama3-chatbot/: README.md
example_bak/tools/: custom_tool_usage.ipynb  file_tool_usage.ipynb  langchain_tool_usage.ipynb  langchain_usage.py
example_bak/util/: proxy.py  template_usage.py
example_bak/wx-chatbot/: README.md  requirements.txt
libs/client/: pyproject.toml
libs/experimental/: pyproject.toml
libs/pne/: LICENSE  Makefile  message.py  pyproject.toml  requirements.txt
libs/pne/pne/: __init__.py  chat.py  message.py
libs/pne/pne/callbacks/: base.py  manager.py
libs/pne/pne/llm/: _litellm.py  base.py
libs/pne/pne/output_formatter/: __init__.py  formatter.py  json_fix.py
libs/pne/pne/tools/: base.py  file.py  manager.py
libs/pne/pne/utils/: __init__.py  color_print.py  core_utils.py  logger.py  string_template.py
libs/pne/tests/basic/: test_hello.py  test_message.py
libs/pne/tests/basic/llm/: test_litellm.py
libs/pne/tests/basic/tools/: test_base.py  test_manager.py
libs/pne/tests/basic/utils/: test_string_template.py
prompt_me/: __init__.py  _core.py  chatbot.py  config.py  conversation.py  utils.py
prompt_me/llm/: __init__.py  base.py  chat.py
prompt_me/preset_role/: __init__.py  (+2 more)
promptulate/: __init__.py  chat.py  chat_utils.py  chatbot.py  config.py  conversation.py  schema.py  tips.py
promptulate_bak/: __init__.py  chat.py  config.py  error.py  schema.py
tests/: test_chat.py  test_chatbot.py  test_duckduckgo.py  test_existing.py  test_import.py  test_plan.py
(+300 files in other folders)
