[tool.poetry]
name = "pne-monorepo"
version = "0.0.1"
description = "pne mono-repo"
authors = ["zeeland <zeeland4work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pne = { path = "libs/pne/", develop = true }
pne-client = { path = "libs/client/", develop = true }
pne-experimental = { path = "libs/experimental/", develop = true }
ruff = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
