[tool.poetry]
name = "pne-monorepo"
version = "0.0.1"
description = "pne mono-repo"
authors = ["zeeland <zeeland4work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pne = { path = "libs/pne/", develop = true }
pne-client = { path = "libs/client/", develop = true }
pne-experimental = { path = "libs/experimental/", develop = true }
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# https://beta.ruff.rs/docs/settings/
# https://docs.astral.sh/ruff/configuration/
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
respect-gitignore = true

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
extend-select = ["I"]
exclude = ["*.ipynb"]
ignore = ["F401"]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
exclude = ["*.ipynb"]
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["tests"]

[coverage.report]
fail_under = 50
show_missing = true
